fix overlay on dark mode refresh

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,15 +27,13 @@
   justify-content: center;
   height: 100vh;
   width: 100%;
+  background-color: rgba(255,255,255,0.6);
 }
 
-.overlay.overlay-dark {
+html[data-theme='dark'] .overlay {
   background-color: rgba(0,0,0,0.6);
 }
 
-.overlay.overlay-light {
-  background-color: rgba(255,255,255,0.6);
-}
 
 .docusaurus-highlight-code-line {
   background-color: rgb(72, 77, 91);
